# audioplayer

./: CMakeLists.txt  README.md  Utils.cmake
litaudioplayer/: CMakeLists.txt  audio_engine.h  audioplayer.cpp  audioplayer_defines.h  engine_properties.h
litaudioplayer/algorithm_structure/frame_factories/: frame_factory_vec_provider.h
litaudioplayer/drivers/: driver_interface.h  file_driver.h
litaudioplayer/helpers/: observable.h
litaudioplayer/playback/: playback_controller.h  playback_interface.h  playback_listener.h  playback_queue.h  playback_queue_interface.h  queued_playback.h  simple_playback.h
litaudioplayer/providers/: audio_metronome_processing_provider.h  audio_metronome_source_provider.h  audio_mixer_processing_provider.h  audio_processing_provider.h  audio_provider_interface.h  audio_sourc e_provider.h  audio_source_provider.h  audio_volume_processing_provider.h
litaudioplayer/structs/: time_signature.h
litaudioplayer/structures/: audio_buffer_deinterleaved_reference.h
litaudioplayer/utils/: conversion.h
litaudioplayer_ui/: CMakeLists.txt  audio_item.h  litaudioplayer.cpp  litaudioplayer.h  main.cpp  player_window.cpp  player_window.h  player_window.ui  test_window.cpp  test_window.h  test_window.ui
litaudioplayer_ui/drivers/: portaudio_driver.h
litaudioplayer_ui/helpers/: mixer_wrapper.cpp  mixer_wrapper.h
litaudioplayer_ui/playback/: litaudioplayback.cpp  litaudioplayback.h
litaudioplayer_ui/structs/: audio_item_descriptor.h
litaudioplayer_ui/utils/: audio_info.h
litwidgets/: CMakeLists.txt  metronome_widget.cpp  metronome_widget.h  metronome_widget.ui  mixer_widget.cpp  mixer_widget.h  mixer_widget.ui  opengl_helper.cpp  opengl_helper.h  test.cpp  waveform_generator.h  waveform_widget.cpp  waveform_widget.h
litwidgets/resources/: shaders.qrc
litwidgets/resources/shaders/: default_plane.vs.glsl  waveform.fs.glsl
